[tool.poetry]
name = "pybalboa"
version = "1.0.2"
description = "Module to communicate with a Balboa spa wifi adapter."
authors = ["Nathan Spencer <natekspencer@gmail.com>","Tim Rightnour <root@garbled.net>"]
readme = "README.rst"
homepage = "https://github.com/garbled1/pybalboa"
repository = "https://github.com/garbled1/pybalboa"
keywords = ["Balboa", "spa", "hot tub", "asynchronous"]
include = ["pybalboa/py.typed"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]


[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.2,<9.0.0"
pytest-asyncio = ">=0.20.3,<0.24.0"
pytest-cov = ">=4,<6"
pytest-timeout = "^2.1.0"
mypy = "^1.3"
tox = ">=3.26,<5.0"
ruff = ">=0.3,<0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
