[tool.poetry]
name = "pybalboa"
version = "0.0.0"
description = "Module to communicate with a Balboa spa wifi adapter."
authors = ["Nathan Spencer <natekspencer@gmail.com>","Tim Rightnour <root@garbled.net>"]
readme = "README.rst"
homepage = "https://github.com/garbled1/pybalboa"
repository = "https://github.com/garbled1/pybalboa"
keywords = ["Balboa", "spa", "hot tub", "asynchronous"]
include = ["pybalboa/py.typed"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.2,<9.0.0"
pytest-asyncio = ">=0.20.3,<0.27.0"
pytest-cov = ">=4,<7"
pytest-timeout = "^2.1.0"
mypy = "^1.3"
tox = ">=3.26,<5.0"
ruff = ">=0.5.0,<0.12"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "default-unprefixed"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
